--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Nikas guldkant - Porslin, Glas & Tillbehör för alla tillfällen</title>
+    <title>Nikas guldkant</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Fleur+De+Leah&display=swap" rel="stylesheet">
