--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
+    <h1>TEST</h1>
   </body>
 </html>
