--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
-    <h1>TEST</h1>
+    <div style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">Laddar...</div>
   </body>
 </html>
